200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=167&leg=2012

--- a/www.cdep.ro/fef29530d9933082dd25730ca109dfa5144942fa.html
+++ b/www.cdep.ro/fef29530d9933082dd25730ca109dfa5144942fa.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Horga_Vasile.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Horga_Vasile.jpg" border=0 width="150" alt="Vasile Horga"></a>
+<img src="/parlamentari/l2012/Horga_Vasile.jpg" border=0 width="150" alt="Vasile Horga">
 <br>b.  3 mar. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vasile HORGA</h1>
 <div class="page-actions">
