--- a/www.cdep.ro/67ecf5b03490ca572778ecb274e817e6a027c1d1.html
+++ b/www.cdep.ro/67ecf5b03490ca572778ecb274e817e6a027c1d1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Ibram_Iusein.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ibram_Iusein.jpg" border=0 width="150" alt="Iusein Ibram"></a>
+<img src="/parlamentari/l2012/Ibram_Iusein.jpg" border=0 width="150" alt="Iusein Ibram">
 <br>b.  6 jul. 1953
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Iusein IBRAM</h1>
 <div class="page-actions">
