200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=182&leg=2012

--- a/www.cdep.ro/321db76e564340720887b60eb46279cd046be2e3.html
+++ b/www.cdep.ro/321db76e564340720887b60eb46279cd046be2e3.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Iordache_Florin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Iordache_Florin.jpg" border=0 width="150" alt="Florin Iordache"></a>
+<img src="/parlamentari/l2012/Iordache_Florin.jpg" border=0 width="150" alt="Florin Iordache">
 <br>b.  14 dec. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florin IORDACHE</h1>
 <div class="page-actions">
