200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=185&leg=2012

--- a/www.cdep.ro/8f5974a610620dd7b7a8fa2b3b1e922ee5393366.html
+++ b/www.cdep.ro/8f5974a610620dd7b7a8fa2b3b1e922ee5393366.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Ispir_Raluca_Cristina.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ispir_Raluca_Cristina.jpg" border=0 width="150" alt="Raluca-Cristina Ispir"></a>
+<img src="/parlamentari/l2012/Ispir_Raluca_Cristina.jpg" border=0 width="150" alt="Raluca-Cristina Ispir">
 <br>b.  22 dec. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Raluca-Cristina ISPIR</h1>
 <div class="page-actions">
