--- a/www.cdep.ro/20cd4b04d847f96e28bee2ef38adb2f79b70a0cb.html
+++ b/www.cdep.ro/20cd4b04d847f96e28bee2ef38adb2f79b70a0cb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Manea_Victor_Gheorghe.jpg" border=0 width="150" alt="Victor-Gheorghe Manea">
+<a href="/parlamentari/l2012/mari/Manea_Victor_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Manea_Victor_Gheorghe.jpg" border=0 width="150" alt="Victor-Gheorghe Manea"></a>
 <br>b.  1 sep. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Victor-Gheorghe MANEA</h1>
 <div class="page-actions">
