--- a/www.cdep.ro/e8027c39806b6a024d9e485e41dec44be28cf3a0.html
+++ b/www.cdep.ro/e8027c39806b6a024d9e485e41dec44be28cf3a0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Manolescu_Oana.jpg" border=0 width="150" alt="Oana Manolescu">
+<a href="/parlamentari/l2012/mari/Manolescu_Oana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Manolescu_Oana.jpg" border=0 width="150" alt="Oana Manolescu"></a>
 <br>b.  26 may 1941
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Oana MANOLESCU</h1>
 <div class="page-actions">
