200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=212&leg=2012

--- a/www.cdep.ro/f2c257eb9adf4e239a878d9ff1914317e897480e.html
+++ b/www.cdep.ro/f2c257eb9adf4e239a878d9ff1914317e897480e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Matei_Calin_Vasile_Andrei.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Matei_Calin_Vasile_Andrei.jpg" border=0 width="150" alt="Cãlin-Vasile-Andrei Matei"></a>
+<img src="/parlamentari/l2012/Matei_Calin_Vasile_Andrei.jpg" border=0 width="150" alt="Cãlin-Vasile-Andrei Matei">
 <br>b.  7 apr. 1966
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cãlin-Vasile-Andrei MATEI</h1>
 <div class="page-actions">
