200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=215&leg=2012

--- a/www.cdep.ro/ef3882d18dceeddbf0dfa86a5c79fb0c6c2b0acc.html
+++ b/www.cdep.ro/ef3882d18dceeddbf0dfa86a5c79fb0c6c2b0acc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Melinte_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Melinte_Ion.jpg" border=0 width="150" alt="Ion Melinte"></a>
+<img src="/parlamentari/l2012/Melinte_Ion.jpg" border=0 width="150" alt="Ion Melinte">
 <br>b.  22 jun. 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion MELINTE</h1>
 <div class="page-actions">
