--- a/www.cdep.ro/0c4d338165e65048d395f579b65655c3f883ce6b.html
+++ b/www.cdep.ro/0c4d338165e65048d395f579b65655c3f883ce6b.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Mihai_Aurelian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mihai_Aurelian.jpg" border=0 width="150" alt="Aurelian Mihai"></a>
+<img src="/parlamentari/l2012/Mihai_Aurelian.jpg" border=0 width="150" alt="Aurelian Mihai">
 <br>b.  24 nov. 1975
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Aurelian MIHAI</h1>
 <div class="page-actions">
