200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=232&leg=2012

--- a/www.cdep.ro/263312c978d43f7d30f931f6343ddbf4e15e2d58.html
+++ b/www.cdep.ro/263312c978d43f7d30f931f6343ddbf4e15e2d58.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Moldovan_Carmen_Ileana.jpg" border=0 width="150" alt="Carmen-Ileana Mihãlcescu">
+<a href="/parlamentari/l2012/mari/Moldovan_Carmen_Ileana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Moldovan_Carmen_Ileana.jpg" border=0 width="150" alt="Carmen-Ileana Mihãlcescu"></a>
 <br>b.  14 may 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Carmen-Ileana MIHÃLCESCU <span>(Moldovan)</span></h1>
 <div class="page-actions">
