--- a/www.cdep.ro/8db44419257fb8a7d5185d6d3c257fa9a3faf74f.html
+++ b/www.cdep.ro/8db44419257fb8a7d5185d6d3c257fa9a3faf74f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Motreanu_Dan_Stefan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Motreanu_Dan_Stefan.jpg" border=0 width="150" alt="Dan-ªtefan Motreanu"></a>
+<img src="/parlamentari/l2012/Motreanu_Dan_Stefan.jpg" border=0 width="150" alt="Dan-ªtefan Motreanu">
 <br>b.  11 sep. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dan-ªtefan MOTREANU</h1>
 <div class="page-actions">
