--- a/www.cdep.ro/e116634c4abe9d52382dd53ad5c6c562fc5448e4.html
+++ b/www.cdep.ro/e116634c4abe9d52382dd53ad5c6c562fc5448e4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Movila_Petru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Movila_Petru.jpg" border=0 width="150" alt="Petru Movilã"></a>
+<img src="/parlamentari/l2012/Movila_Petru.jpg" border=0 width="150" alt="Petru Movilã">
 <br>b.  26 oct. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Petru MOVILÃ</h1>
 <div class="page-actions">
