--- a/www.cdep.ro/1e2f7ce02b53321e94c97a72ced6f6c49ff014eb.html
+++ b/www.cdep.ro/1e2f7ce02b53321e94c97a72ced6f6c49ff014eb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/NeacsuMarian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/NeacsuMarian.jpg" border=0 width="150" alt="Marian Neacºu"></a>
+<img src="/parlamentari/l2012/NeacsuMarian.jpg" border=0 width="150" alt="Marian Neacºu">
 <br>b.  27 may 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Marian NEACªU</h1>
 <div class="page-actions">
