--- a/www.cdep.ro/2ea8c5501c3733e4469189887c8302cd7e5294b1.html
+++ b/www.cdep.ro/2ea8c5501c3733e4469189887c8302cd7e5294b1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nichita_Cristina.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nichita_Cristina.jpg" border=0 width="150" alt="Cristina Nichita"></a>
+<img src="/parlamentari/l2012/Nichita_Cristina.jpg" border=0 width="150" alt="Cristina Nichita">
 <br>b.  18 dec. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cristina NICHITA</h1>
 <div class="page-actions">
