--- a/www.cdep.ro/ce25aefb5f7ded9190aaa610d4bed5315ae8d032.html
+++ b/www.cdep.ro/ce25aefb5f7ded9190aaa610d4bed5315ae8d032.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nicoara_Romeo_Florin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nicoara_Romeo_Florin.jpg" border=0 width="150" alt="Romeo Florin Nicoarã"></a>
+<img src="/parlamentari/l2012/Nicoara_Romeo_Florin.jpg" border=0 width="150" alt="Romeo Florin Nicoarã">
 <br>b.  12 nov. 1972
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Romeo Florin NICOARÃ</h1>
 <div class="page-actions">
