200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=254&leg=2012

--- a/www.cdep.ro/090a0e03930a1dbff6967bd5a4e8082342158695.html
+++ b/www.cdep.ro/090a0e03930a1dbff6967bd5a4e8082342158695.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nicolae_Alexandri.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nicolae_Alexandri.jpg" border=0 width="150" alt="Alexandri Nicolae"></a>
+<img src="/parlamentari/l2012/Nicolae_Alexandri.jpg" border=0 width="150" alt="Alexandri Nicolae">
 <br>b.  28 sep. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Alexandri NICOLAE</h1>
 <div class="page-actions">
