--- a/www.cdep.ro/dda5df299d8a5bb5bd408b8895697150fe7087fc.html
+++ b/www.cdep.ro/dda5df299d8a5bb5bd408b8895697150fe7087fc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nicolae_Florian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nicolae_Florian.jpg" border=0 width="150" alt="Florian Nicolae"></a>
+<img src="/parlamentari/l2012/Nicolae_Florian.jpg" border=0 width="150" alt="Florian Nicolae">
 <br>b.  14 dec. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florian NICOLAE</h1>
 <div class="page-actions">
