--- a/www.cdep.ro/b10c4bf83d4a861228b808a91e91fc84a824c605.html
+++ b/www.cdep.ro/b10c4bf83d4a861228b808a91e91fc84a824c605.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Nicolaescu_Gheorghe_Eugen.jpg" border=0 width="150" alt="Gheorghe-Eugen Nicolãescu">
+<a href="/parlamentari/l2012/mari/Nicolaescu_Gheorghe_Eugen.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nicolaescu_Gheorghe_Eugen.jpg" border=0 width="150" alt="Gheorghe-Eugen Nicolãescu"></a>
 <br>b.  2 aug. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe-Eugen NICOLÃESCU</h1>
 <div class="page-actions">
