--- a/www.cdep.ro/bcd3426855ec34f582790387ee04c88b9283c517.html
+++ b/www.cdep.ro/bcd3426855ec34f582790387ee04c88b9283c517.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Niculae_Aurel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Niculae_Aurel.jpg" border=0 width="150" alt="Aurel Niculae"></a>
+<img src="/parlamentari/l2012/Niculae_Aurel.jpg" border=0 width="150" alt="Aurel Niculae">
 <br>b.  19 sep. 1957
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Aurel NICULAE</h1>
 <div class="page-actions">
