200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=261&leg=2012

--- a/www.cdep.ro/3d3c14794e29b993fb31e575d6e461f92c2b1a71.html
+++ b/www.cdep.ro/3d3c14794e29b993fb31e575d6e461f92c2b1a71.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Niculescu_Duvaz.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Niculescu_Duvaz.jpg" border=0 width="150" alt="Bogdan Nicolae Niculescu Duvãz"></a>
+<img src="/parlamentari/l2012/Niculescu_Duvaz.jpg" border=0 width="150" alt="Bogdan Nicolae Niculescu Duvãz">
 <br>b.  14 dec. 1948
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Bogdan Nicolae NICULESCU DUVÃZ</h1>
 <div class="page-actions">
