200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=265&leg=2012

--- a/www.cdep.ro/55ebbc8e4384498a7722ce1933530bb8787cf9b2.html
+++ b/www.cdep.ro/55ebbc8e4384498a7722ce1933530bb8787cf9b2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nistor_Marioara.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nistor_Marioara.jpg" border=0 width="150" alt="Marioara Nistor"></a>
+<img src="/parlamentari/l2012/Nistor_Marioara.jpg" border=0 width="150" alt="Marioara Nistor">
 <br>b.  13 jan. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Marioara NISTOR</h1>
 <div class="page-actions">
