200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=269&leg=2012

--- a/www.cdep.ro/80561e87855376bead1719653ce3b05269fa470a.html
+++ b/www.cdep.ro/80561e87855376bead1719653ce3b05269fa470a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Oajdea_Daniel_Vasile.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Oajdea_Daniel_Vasile.jpg" border=0 width="150" alt="Daniel Vasile Oajdea"></a>
+<img src="/parlamentari/l2012/Oajdea_Daniel_Vasile.jpg" border=0 width="150" alt="Daniel Vasile Oajdea">
 <br>b.  11 jun. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Daniel Vasile OAJDEA</h1>
 <div class="page-actions">
