--- a/www.cdep.ro/42c843d061244040598f1b721a9ff8857ea5fe07.html
+++ b/www.cdep.ro/42c843d061244040598f1b721a9ff8857ea5fe07.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Pargaru_Ion.jpg" border=0 width="150" alt="Ion Pârgaru">
+<a href="/parlamentari/l2012/mari/Pargaru_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Pargaru_Ion.jpg" border=0 width="150" alt="Ion Pârgaru"></a>
 <br>b.  18 jul. 1948
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion PÂRGARU</h1>
 <div class="page-actions">
