--- a/www.cdep.ro/1d1630be03a5746df84bb8f1e3a5b57a33853e6d.html
+++ b/www.cdep.ro/1d1630be03a5746df84bb8f1e3a5b57a33853e6d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Peia_Ninel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Peia_Ninel.jpg" border=0 width="150" alt="Ninel Peia"></a>
+<img src="/parlamentari/l2012/Peia_Ninel.jpg" border=0 width="150" alt="Ninel Peia">
 <br>b.  7 oct. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ninel PEIA</h1>
 <div class="page-actions">
