200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=289&leg=2012

--- a/www.cdep.ro/efa7564235dbdc1b5fa1a307201435fecbb24671.html
+++ b/www.cdep.ro/efa7564235dbdc1b5fa1a307201435fecbb24671.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Pistru_Popa_Eusebiu_Manea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Pistru_Popa_Eusebiu_Manea.jpg" border=0 width="150" alt="Eusebiu-Manea Pistru-Popa"></a>
+<img src="/parlamentari/l2012/Pistru_Popa_Eusebiu_Manea.jpg" border=0 width="150" alt="Eusebiu-Manea Pistru-Popa">
 <br>b.  25 may 1966
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Eusebiu-Manea PISTRU-POPA</h1>
 <div class="page-actions">
