200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=292&leg=2012

--- a/www.cdep.ro/7349dec1525dd6e8b4a2ac4b4c9398d23b879290.html
+++ b/www.cdep.ro/7349dec1525dd6e8b4a2ac4b4c9398d23b879290.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Podasca_Gabriela_Maria.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Podasca_Gabriela_Maria.jpg" border=0 width="150" alt="Gabriela-Maria Podaºcã"></a>
+<img src="/parlamentari/l2012/Podasca_Gabriela_Maria.jpg" border=0 width="150" alt="Gabriela-Maria Podaºcã">
 <br>b.  3 may 1985
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gabriela-Maria PODAªCÃ</h1>
 <div class="page-actions">
