--- a/www.cdep.ro/6d1833f528c25d5fd94ee291bce6943308425603.html
+++ b/www.cdep.ro/6d1833f528c25d5fd94ee291bce6943308425603.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Popa_Radu_Mihai.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Popa_Radu_Mihai.jpg" border=0 width="150" alt="Radu Mihai Popa"></a>
+<img src="/parlamentari/l2012/Popa_Radu_Mihai.jpg" border=0 width="150" alt="Radu Mihai Popa">
 <br>b.  16 nov. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Radu Mihai POPA</h1>
 <div class="page-actions">
