--- a/www.cdep.ro/928158bfd86bb446888fa18d10a59d57e40997b9.html
+++ b/www.cdep.ro/928158bfd86bb446888fa18d10a59d57e40997b9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Popeanga_Vasile.jpg" border=0 width="150" alt="Vasile Popeangã">
+<a href="/parlamentari/l2012/mari/Popeanga_Vasile.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Popeanga_Vasile.jpg" border=0 width="150" alt="Vasile Popeangã"></a>
 <br>b.  5 mar. 1948
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vasile POPEANGÃ</h1>
 <div class="page-actions">
