--- a/www.cdep.ro/afb0a9ffe27c9bd5dee22f22bf7429d9f8affd3d.html
+++ b/www.cdep.ro/afb0a9ffe27c9bd5dee22f22bf7429d9f8affd3d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/SavaAndreiValentin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SavaAndreiValentin.jpg" border=0 width="150" alt="Andrei-Valentin Sava"></a>
+<img src="/parlamentari/l2012/SavaAndreiValentin.jpg" border=0 width="150" alt="Andrei-Valentin Sava">
 <br>b.  27 mar. 1981
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Andrei-Valentin SAVA</h1>
 <div class="page-actions">
