200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=326&leg=2012

--- a/www.cdep.ro/80f4e308e3a90435f1602f9acfbf81a659e39c9d.html
+++ b/www.cdep.ro/80f4e308e3a90435f1602f9acfbf81a659e39c9d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/SavoiuIonutCristian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SavoiuIonutCristian.jpg" border=0 width="150" alt="Ionuþ-Cristian Sãvoiu"></a>
+<img src="/parlamentari/l2012/SavoiuIonutCristian.jpg" border=0 width="150" alt="Ionuþ-Cristian Sãvoiu">
 <br>b.  8 oct. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ionuþ-Cristian SÃVOIU</h1>
 <div class="page-actions">
