200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=328&leg=2012

--- a/www.cdep.ro/b76f8dc3a336a7e80c9182392907d4957f8d53b8.html
+++ b/www.cdep.ro/b76f8dc3a336a7e80c9182392907d4957f8d53b8.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/ScheleanValeriaDiana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/ScheleanValeriaDiana.jpg" border=0 width="150" alt="Valeria-Diana Schelean-ªomfelean"></a>
+<img src="/parlamentari/l2012/ScheleanValeriaDiana.jpg" border=0 width="150" alt="Valeria-Diana Schelean-ªomfelean">
 <br>b.  24 mar. 1981
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Valeria-Diana SCHELEAN-ªOMFELEAN</h1>
 <div class="page-actions">
