--- a/www.cdep.ro/291b1f1964d0b49a3f847b25ec5ab0028f9b022f.html
+++ b/www.cdep.ro/291b1f1964d0b49a3f847b25ec5ab0028f9b022f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/SimedruDanCoriolan.jpg" border=0 width="150" alt="Dan Coriolan Simedru">
+<a href="/parlamentari/l2012/mari/SimedruDanCoriolan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SimedruDanCoriolan.jpg" border=0 width="150" alt="Dan Coriolan Simedru"></a>
 <br>b.  25 feb. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dan Coriolan SIMEDRU</h1>
 <div class="page-actions">
