200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=337&leg=2012

--- a/www.cdep.ro/ed9ff9076bb09619a36bc4cf78100fb18024a635.html
+++ b/www.cdep.ro/ed9ff9076bb09619a36bc4cf78100fb18024a635.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Solomon_Adrian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Solomon_Adrian.jpg" border=0 width="150" alt="Adrian Solomon"></a>
+<img src="/parlamentari/l2012/Solomon_Adrian.jpg" border=0 width="150" alt="Adrian Solomon">
 <br>b.  20 sep. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Adrian SOLOMON</h1>
 <div class="page-actions">
