--- a/www.cdep.ro/f2ce6b68f50d79c0095c85d94f53a8f08e8479d4.html
+++ b/www.cdep.ro/f2ce6b68f50d79c0095c85d94f53a8f08e8479d4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/StativaIrinelIoan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/StativaIrinelIoan.jpg" border=0 width="150" alt="Irinel Ioan Stativã"></a>
+<img src="/parlamentari/l2012/StativaIrinelIoan.jpg" border=0 width="150" alt="Irinel Ioan Stativã">
 <br>b.  5 jan. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Irinel Ioan STATIVÃ</h1>
 <div class="page-actions">
