200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=344&leg=2012

--- a/www.cdep.ro/aac45d1c71b59b75c69d939e90e00dfff39ea131.html
+++ b/www.cdep.ro/aac45d1c71b59b75c69d939e90e00dfff39ea131.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/StanescuAlexandru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/StanescuAlexandru.jpg" border=0 width="150" alt="Alexandru Stãnescu"></a>
+<img src="/parlamentari/l2012/StanescuAlexandru.jpg" border=0 width="150" alt="Alexandru Stãnescu">
 <br>b.  6 dec. 1961
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Alexandru STÃNESCU</h1>
 <div class="page-actions">
