--- a/www.cdep.ro/11c2f9f5bf574090ab0bcfd95e98d70a9e6b392d.html
+++ b/www.cdep.ro/11c2f9f5bf574090ab0bcfd95e98d70a9e6b392d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/StoicaMihaela.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/StoicaMihaela.jpg" border=0 width="150" alt="Mihaela Stoica"></a>
+<img src="/parlamentari/l2012/StoicaMihaela.jpg" border=0 width="150" alt="Mihaela Stoica">
 <br>b.  6 jul. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihaela STOICA</h1>
 <div class="page-actions">
