--- a/www.cdep.ro/06dd9003aaec8a9db68cc68ac1b7483893632bb0.html
+++ b/www.cdep.ro/06dd9003aaec8a9db68cc68ac1b7483893632bb0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/ScheauIon.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/ScheauIon.jpg" border=0 width="150" alt="Ion ªcheau"></a>
+<img src="/parlamentari/l2012/ScheauIon.jpg" border=0 width="150" alt="Ion ªcheau">
 <br>b.  27 feb. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion ªCHEAU</h1>
 <div class="page-actions">
