--- a/www.cdep.ro/e287c91360b284e919b54b2b97b6f6f9a4ced1e8.html
+++ b/www.cdep.ro/e287c91360b284e919b54b2b97b6f6f9a4ced1e8.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TanaseRazvanIonut.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TanaseRazvanIonut.jpg" border=0 width="150" alt="Rãzvan-Ionuþ Tãnase"></a>
+<img src="/parlamentari/l2012/TanaseRazvanIonut.jpg" border=0 width="150" alt="Rãzvan-Ionuþ Tãnase">
 <br>b.  7 mar. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Rãzvan-Ionuþ TÃNASE</h1>
 <div class="page-actions">
