--- a/www.cdep.ro/33e2f330ba2e42bdc7e9c80e65401c38c983bc80.html
+++ b/www.cdep.ro/33e2f330ba2e42bdc7e9c80e65401c38c983bc80.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TejuSorin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TejuSorin.jpg" border=0 width="150" alt="Sorin Teju"></a>
+<img src="/parlamentari/l2012/TejuSorin.jpg" border=0 width="150" alt="Sorin Teju">
 <br>b.  4 apr. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Sorin TEJU</h1>
 <div class="page-actions">
