--- a/www.cdep.ro/58aac781ab4d9400b8e7586af11a59df82be89f0.html
+++ b/www.cdep.ro/58aac781ab4d9400b8e7586af11a59df82be89f0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TimpauRaduBogdan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TimpauRaduBogdan.jpg" border=0 width="150" alt="Radu Bogdan Þîmpãu"></a>
+<img src="/parlamentari/l2012/TimpauRaduBogdan.jpg" border=0 width="150" alt="Radu Bogdan Þîmpãu">
 <br>b.  28 jul. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Radu Bogdan ÞÎMPÃU</h1>
 <div class="page-actions">
