--- a/www.cdep.ro/fd032ca4900b794cfcb5d32563e0357202597133.html
+++ b/www.cdep.ro/fd032ca4900b794cfcb5d32563e0357202597133.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Udrea-Elena-Gabriela.jpg" border=0 width="150" alt="Elena Gabriela Udrea">
+<a href="/parlamentari/l2012/mari/Udrea-Elena-Gabriela.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Udrea-Elena-Gabriela.jpg" border=0 width="150" alt="Elena Gabriela Udrea"></a>
 <br>b.  26 dec. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Elena Gabriela UDREA</h1>
 <div class="page-actions">
