--- a/www.cdep.ro/561f454b5dae063eb7d3ebf73cce3d20b3a47016.html
+++ b/www.cdep.ro/561f454b5dae063eb7d3ebf73cce3d20b3a47016.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/UrcanIonasFlorin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/UrcanIonasFlorin.jpg" border=0 width="150" alt="Ionaº-Florin Urcan"></a>
+<img src="/parlamentari/l2012/UrcanIonasFlorin.jpg" border=0 width="150" alt="Ionaº-Florin Urcan">
 <br>b.  19 dec. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ionaº-Florin URCAN</h1>
 <div class="page-actions">
