200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=400&leg=2012

--- a/www.cdep.ro/83327ddd50be736415ac5413b23d65b14a46d3b6.html
+++ b/www.cdep.ro/83327ddd50be736415ac5413b23d65b14a46d3b6.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Vladu_Iulian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Vladu_Iulian.jpg" border=0 width="150" alt="Iulian Vladu"></a>
+<img src="/parlamentari/l2012/Vladu_Iulian.jpg" border=0 width="150" alt="Iulian Vladu">
 <br>b.  1 apr. 1961
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Iulian VLADU</h1>
 <div class="page-actions">
