--- a/www.cdep.ro/688e04b138cf2a674bc26d78f4ea72461dccc7a5.html
+++ b/www.cdep.ro/688e04b138cf2a674bc26d78f4ea72461dccc7a5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Vlase_Petru_Gabriel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Vlase_Petru_Gabriel.jpg" border=0 width="150" alt="Petru Gabriel Vlase"></a>
+<img src="/parlamentari/l2012/Vlase_Petru_Gabriel.jpg" border=0 width="150" alt="Petru Gabriel Vlase">
 <br>b.  3 apr. 1971
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Petru Gabriel VLASE</h1>
 <div class="page-actions">
