200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=245&leg=2012

--- a/www.cdep.ro/b0bb65e6ab051a1346e7ebef383153879d621a60.html
+++ b/www.cdep.ro/b0bb65e6ab051a1346e7ebef383153879d621a60.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nechita_Aurel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nechita_Aurel.jpg" border=0 width="150" alt="Aurel Nechita"></a>
+<img src="/parlamentari/l2012/Nechita_Aurel.jpg" border=0 width="150" alt="Aurel Nechita">
 <br>b.  14 apr. 1951
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Aurel NECHITA</h1>
 <div class="page-actions">
