--- a/www.cdep.ro/a49b69a9098b85c9bb0874cd68d26cf1a7edc6e2.html
+++ b/www.cdep.ro/a49b69a9098b85c9bb0874cd68d26cf1a7edc6e2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Stoica_Stefan_Bucur.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Stoica_Stefan_Bucur.jpg" border=0 width="150" alt="ªtefan-Bucur Stoica"></a>
+<img src="/parlamentari/l2012/Stoica_Stefan_Bucur.jpg" border=0 width="150" alt="ªtefan-Bucur Stoica">
 <br>b.  29 jul. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">ªtefan-Bucur STOICA</h1>
 <div class="page-actions">
