200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=397&leg=2012

--- a/www.cdep.ro/1f6ebac26af6308b4ed20abf23317b445adcd7cb.html
+++ b/www.cdep.ro/1f6ebac26af6308b4ed20abf23317b445adcd7cb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Nicolae_Vasilescu.jpg" border=0 width="150" alt="Nicolae Vasilescu">
+<a href="/parlamentari/l2012/mari/Nicolae_Vasilescu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nicolae_Vasilescu.jpg" border=0 width="150" alt="Nicolae Vasilescu"></a>
 <br>b.  15 aug. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Nicolae VASILESCU</h1>
 <div class="page-actions">
