--- a/www.cdep.ro/aaf738c083bac0801dfd826ff6697c724c0f1c4e.html
+++ b/www.cdep.ro/aaf738c083bac0801dfd826ff6697c724c0f1c4e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Grapini_Maria.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Grapini_Maria.jpg" border=0 width="150" alt="Maria Grapini"></a>
+<img src="/parlamentari/l2012/Grapini_Maria.jpg" border=0 width="150" alt="Maria Grapini">
 <br>b.  7 nov. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Maria GRAPINI</h1>
 <div class="page-actions">
