200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=285&leg=2012

--- a/www.cdep.ro/66240dca92318452dc1cd1d603df79216e754a42.html
+++ b/www.cdep.ro/66240dca92318452dc1cd1d603df79216e754a42.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Petrache_Adrian_Alin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Petrache_Adrian_Alin.jpg" border=0 width="150" alt="Adrian-Alin Petrache"></a>
+<img src="/parlamentari/l2012/Petrache_Adrian_Alin.jpg" border=0 width="150" alt="Adrian-Alin Petrache">
 <br>b.  29 oct. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Adrian-Alin PETRACHE</h1>
 <div class="page-actions">
