--- a/www.cdep.ro/0638db2c6b8476762afc16c7844bdb54686f6ff2.html
+++ b/www.cdep.ro/0638db2c6b8476762afc16c7844bdb54686f6ff2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Hrebenciuc_Viorel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Hrebenciuc_Viorel.jpg" border=0 width="150" alt="Viorel Hrebenciuc"></a>
+<img src="/parlamentari/l2012/Hrebenciuc_Viorel.jpg" border=0 width="150" alt="Viorel Hrebenciuc">
 <br>b.  7 aug. 1953
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Viorel HREBENCIUC</h1>
 <div class="page-actions">
