--- a/www.cdep.ro/bf31b2d82d77058c8b75a7a711e39923ed99a2da.html
+++ b/www.cdep.ro/bf31b2d82d77058c8b75a7a711e39923ed99a2da.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Mitrea_Miron.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mitrea_Miron.jpg" border=0 width="150" alt="Miron Tudor Mitrea"></a>
+<img src="/parlamentari/l2012/Mitrea_Miron.jpg" border=0 width="150" alt="Miron Tudor Mitrea">
 <br>b.  8 aug. 1956
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Miron Tudor MITREA</h1>
 <div class="page-actions">
