--- a/www.cdep.ro/8470d5830bb264f2acae84987d8b857269adacf2.html
+++ b/www.cdep.ro/8470d5830bb264f2acae84987d8b857269adacf2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Iacob_Ridzi_Monica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Iacob_Ridzi_Monica.jpg" border=0 width="150" alt="Monica Maria Iacob Ridzi"></a>
+<img src="/parlamentari/l2012/Iacob_Ridzi_Monica.jpg" border=0 width="150" alt="Monica Maria Iacob Ridzi">
 <br>b.  30 jun. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Monica Maria IACOB RIDZI</h1>
 <div class="page-actions">
