--- a/www.cdep.ro/206f58ebffb7f659d70c00967be3a52e623b3e36.html
+++ b/www.cdep.ro/206f58ebffb7f659d70c00967be3a52e623b3e36.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Marko_Attila_Gabor.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Marko_Attila_Gabor.jpg" border=0 width="150" alt="Attila-Gabor Markó"></a>
+<img src="/parlamentari/l2012/Marko_Attila_Gabor.jpg" border=0 width="150" alt="Attila-Gabor Markó">
 <br>b.  27 sep. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">MARKÓ Attila-Gabor</h1>
 <div class="page-actions">
