--- a/www.cdep.ro/208cf0510dd20d1e49ad97a798aab910156ffdef.html
+++ b/www.cdep.ro/208cf0510dd20d1e49ad97a798aab910156ffdef.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dragomir_Viorel_Marian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dragomir_Viorel_Marian.jpg" border=0 width="150" alt="Viorel Marian Dragomir"></a>
+<img src="/parlamentari/l2012/Dragomir_Viorel_Marian.jpg" border=0 width="150" alt="Viorel Marian Dragomir">
 <br>b.  16 jun. 1975
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Viorel Marian DRAGOMIR</h1>
 <div class="page-actions">
