--- a/www.cdep.ro/5ad0da75c0869b6a575354e11f3444a001586c3a.html
+++ b/www.cdep.ro/5ad0da75c0869b6a575354e11f3444a001586c3a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dontu_Mihai_Aurel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dontu_Mihai_Aurel.jpg" border=0 width="150" alt="Mihai-Aurel Donþu"></a>
+<img src="/parlamentari/l2012/Dontu_Mihai_Aurel.jpg" border=0 width="150" alt="Mihai-Aurel Donþu">
 <br>b.  12 mar. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai-Aurel DONÞU</h1>
 <div class="page-actions">
