200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=298&leg=2012

--- a/www.cdep.ro/c5963c5e95ef2123b40c54820385821b6775c1a8.html
+++ b/www.cdep.ro/c5963c5e95ef2123b40c54820385821b6775c1a8.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Popescu_Dan_Cristian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Popescu_Dan_Cristian.jpg" border=0 width="150" alt="Dan-Cristian Popescu"></a>
+<img src="/parlamentari/l2012/Popescu_Dan_Cristian.jpg" border=0 width="150" alt="Dan-Cristian Popescu">
 <br>b.  31 dec. 1975
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dan-Cristian POPESCU</h1>
 <div class="page-actions">
