--- a/www.cdep.ro/f25babdbf2d3bf09e35cc08e6718259a4251d596.html
+++ b/www.cdep.ro/f25babdbf2d3bf09e35cc08e6718259a4251d596.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Enea_Constantin_Cosmin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Enea_Constantin_Cosmin.jpg" border=0 width="150" alt="Constantin-Cosmin Enea"></a>
+<img src="/parlamentari/l2012/Enea_Constantin_Cosmin.jpg" border=0 width="150" alt="Constantin-Cosmin Enea">
 <br>b.  14 oct. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin-Cosmin ENEA</h1>
 <div class="page-actions">
