200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=111&leg=2012

--- a/www.cdep.ro/f657e287286ec91c34a82cffbc8635bbec1c001a.html
+++ b/www.cdep.ro/f657e287286ec91c34a82cffbc8635bbec1c001a.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dragnea_Liviu_Nicolae.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dragnea_Liviu_Nicolae.jpg" border=0 width="150" alt="Nicolae-Liviu Dragnea"></a>
+<img src="/parlamentari/l2012/Dragnea_Liviu_Nicolae.jpg" border=0 width="150" alt="Nicolae-Liviu Dragnea">
 <br>b.  28 oct. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Nicolae-Liviu DRAGNEA</h1>
 <div class="page-actions">
