--- a/www.cdep.ro/f2673ed8965ed8f8589b6436f9929334d81dfddb.html
+++ b/www.cdep.ro/f2673ed8965ed8f8589b6436f9929334d81dfddb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Adam_Luminita_Pachel.jpg" border=0 width="150" alt="Luminiþa-Pachel Adam">
+<a href="/parlamentari/l2012/mari/Adam_Luminita_Pachel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Adam_Luminita_Pachel.jpg" border=0 width="150" alt="Luminiþa-Pachel Adam"></a>
 <br>b.  22 feb. 1966
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Luminiþa-Pachel ADAM</h1>
 <div class="page-actions">
