--- a/www.cdep.ro/495494c3ee18886c0ebc78425c558c9c58dcaab3.html
+++ b/www.cdep.ro/495494c3ee18886c0ebc78425c558c9c58dcaab3.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Andronache_Gabriel.jpg" border=0 width="150" alt="Gabriel Andronache">
+<a href="/parlamentari/l2012/mari/Andronache_Gabriel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Andronache_Gabriel.jpg" border=0 width="150" alt="Gabriel Andronache"></a>
 <br>b.  22 sep. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gabriel ANDRONACHE</h1>
 <div class="page-actions">
