--- a/www.cdep.ro/2595d0c21d996be9a50d2b6923371102bf08ee82.html
+++ b/www.cdep.ro/2595d0c21d996be9a50d2b6923371102bf08ee82.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Anusca_Roxana.jpg" border=0 width="150" alt="Roxana-Florentina Anuºca">
+<a href="/parlamentari/l2012/mari/Anusca_Roxana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Anusca_Roxana.jpg" border=0 width="150" alt="Roxana-Florentina Anuºca"></a>
 <br>b.  14 apr. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Roxana-Florentina ANUªCA</h1>
 <div class="page-actions">
