--- a/www.cdep.ro/979d099b1be010315191120f8a80fa03d3560a21.html
+++ b/www.cdep.ro/979d099b1be010315191120f8a80fa03d3560a21.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Balta_Mihai.jpg" border=0 width="150" alt="Mihai Baltã">
+<a href="/parlamentari/l2012/mari/Balta_Mihai.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Balta_Mihai.jpg" border=0 width="150" alt="Mihai Baltã"></a>
 <br>b.  4 oct. 1948
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai BALTÃ</h1>
 <div class="page-actions">
