--- a/www.cdep.ro/68f5971c5621dec5bcb54930efe0257f5991df60.html
+++ b/www.cdep.ro/68f5971c5621dec5bcb54930efe0257f5991df60.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Baisanu_Stefan_Alexandru.jpg" border=0 width="150" alt="ªtefan-Alexandru Bãiºanu">
+<a href="/parlamentari/l2012/mari/Baisanu_Stefan_Alexandru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Baisanu_Stefan_Alexandru.jpg" border=0 width="150" alt="ªtefan-Alexandru Bãiºanu"></a>
 <br>b.  3 jan. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">ªtefan-Alexandru BÃIªANU</h1>
 <div class="page-actions">
