--- a/www.cdep.ro/e207218aaa377f95b772c7fe1502eecd43fe04c7.html
+++ b/www.cdep.ro/e207218aaa377f95b772c7fe1502eecd43fe04c7.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Birchall_Ana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Birchall_Ana.jpg" border=0 width="150" alt="Ana Birchall"></a>
+<img src="/parlamentari/l2012/Birchall_Ana.jpg" border=0 width="150" alt="Ana Birchall">
 <br>b.  30 aug. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ana BIRCHALL</h1>
 <div class="page-actions">
