200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=40&leg=2012

--- a/www.cdep.ro/1b8cec4367c647b225123252fe1915d26c747fa2.html
+++ b/www.cdep.ro/1b8cec4367c647b225123252fe1915d26c747fa2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Bonis_Istvan.jpg" border=0 width="150" alt="István Bónis">
+<a href="/parlamentari/l2012/mari/Bonis_Istvan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bonis_Istvan.jpg" border=0 width="150" alt="István Bónis"></a>
 <br>b.  1 may 1951
 </div><div class="boxTitle"><h1 style="line-height: 110%;">BÓNIS István</h1>
 <div class="page-actions">
