--- a/www.cdep.ro/1440a4df3b6d1410dc06b4d39329e041d06fcee1.html
+++ b/www.cdep.ro/1440a4df3b6d1410dc06b4d39329e041d06fcee1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Bucur_Constantin_Alin.jpg" border=0 width="150" alt="Constantin-Alin Bucur">
+<a href="/parlamentari/l2012/mari/Bucur_Constantin_Alin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bucur_Constantin_Alin.jpg" border=0 width="150" alt="Constantin-Alin Bucur"></a>
 <br>b.  11 dec. 1980
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin-Alin BUCUR</h1>
 <div class="page-actions">
