200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=48&leg=2012

--- a/www.cdep.ro/ab5b1a35f6c6c08f2d7bb499c1590a225192e02f.html
+++ b/www.cdep.ro/ab5b1a35f6c6c08f2d7bb499c1590a225192e02f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Buicu_Corneliu_Florin.jpg" border=0 width="150" alt="Corneliu-Florin Buicu">
+<a href="/parlamentari/l2012/mari/Buicu_Corneliu_Florin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Buicu_Corneliu_Florin.jpg" border=0 width="150" alt="Corneliu-Florin Buicu"></a>
 <br>b.  22 nov. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Corneliu-Florin BUICU</h1>
 <div class="page-actions">
