200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=52&leg=2012

--- a/www.cdep.ro/251e3260bc949b0979291280ca905590313438e0.html
+++ b/www.cdep.ro/251e3260bc949b0979291280ca905590313438e0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Calota_Florica_Ica.jpg" border=0 width="150" alt="Floricã Icã Calotã">
+<a href="/parlamentari/l2012/mari/Calota_Florica_Ica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Calota_Florica_Ica.jpg" border=0 width="150" alt="Floricã Icã Calotã"></a>
 <br>b.  25 apr. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Floricã Icã CALOTÃ</h1>
 <div class="page-actions">
