--- a/www.cdep.ro/706e1fbecb98c14db466b9f17eafc3b2f7a4a676.html
+++ b/www.cdep.ro/706e1fbecb98c14db466b9f17eafc3b2f7a4a676.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Cernea_Remus_Florinel.jpg" border=0 width="150" alt="Remus-Florinel Cernea">
+<a href="/parlamentari/l2012/mari/Cernea_Remus_Florinel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cernea_Remus_Florinel.jpg" border=0 width="150" alt="Remus-Florinel Cernea"></a>
 <br>b.  25 jun. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Remus-Florinel CERNEA</h1>
 <div class="page-actions">
