200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=61&leg=2012

--- a/www.cdep.ro/1c0ed23599a8c2a4d2bfb89adfeba27a8c4e1452.html
+++ b/www.cdep.ro/1c0ed23599a8c2a4d2bfb89adfeba27a8c4e1452.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Chirita_Dumitru.jpg" border=0 width="150" alt="Dumitru Chiriþã">
+<a href="/parlamentari/l2012/mari/Chirita_Dumitru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Chirita_Dumitru.jpg" border=0 width="150" alt="Dumitru Chiriþã"></a>
 <br>b.  7 apr. 1963
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dumitru CHIRIÞÃ</h1>
 <div class="page-actions">
