--- a/www.cdep.ro/15697eb1397fc316268c541ba72d0e220c46c689.html
+++ b/www.cdep.ro/15697eb1397fc316268c541ba72d0e220c46c689.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ciocan_Dan.jpg" border=0 width="150" alt="Dan Ciocan">
+<a href="/parlamentari/l2012/mari/Ciocan_Dan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ciocan_Dan.jpg" border=0 width="150" alt="Dan Ciocan"></a>
 <br>b.  15 feb. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dan CIOCAN</h1>
 <div class="page-actions">
