--- a/www.cdep.ro/15a82f6c9c027b641b8076905a70caa17235b3a5.html
+++ b/www.cdep.ro/15a82f6c9c027b641b8076905a70caa17235b3a5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ciuca_Liviu_Bogdan.jpg" border=0 width="150" alt="Liviu-Bogdan Ciucã">
+<a href="/parlamentari/l2012/mari/Ciuca_Liviu_Bogdan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ciuca_Liviu_Bogdan.jpg" border=0 width="150" alt="Liviu-Bogdan Ciucã"></a>
 <br>b.  13 oct. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Liviu-Bogdan CIUCÃ</h1>
 <div class="page-actions">
