--- a/www.cdep.ro/cdcf04028362518402642d7626ff18ae44f0fbd8.html
+++ b/www.cdep.ro/cdcf04028362518402642d7626ff18ae44f0fbd8.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Cosma_Vlad_Alexandru.jpg" border=0 width="150" alt="Vlad-Alexandru Cosma">
+<a href="/parlamentari/l2012/mari/Cosma_Vlad_Alexandru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cosma_Vlad_Alexandru.jpg" border=0 width="150" alt="Vlad-Alexandru Cosma"></a>
 <br>b.  8 feb. 1983
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vlad-Alexandru COSMA</h1>
 <div class="page-actions">
