--- a/www.cdep.ro/c9a79579bcb618e7e94a5ccfca246a87e7d5bb37.html
+++ b/www.cdep.ro/c9a79579bcb618e7e94a5ccfca246a87e7d5bb37.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Costin_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Costin">
+<a href="/parlamentari/l2012/mari/Costin_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Costin_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Costin"></a>
 <br>b.  8 aug. 1954
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe COSTIN</h1>
 <div class="page-actions">
