--- a/www.cdep.ro/da79ee39695c7e4adc5e7ba018265c27915979d1.html
+++ b/www.cdep.ro/da79ee39695c7e4adc5e7ba018265c27915979d1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Cupa_Ion.jpg" border=0 width="150" alt="Ion Cupã">
+<a href="/parlamentari/l2012/mari/Cupa_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cupa_Ion.jpg" border=0 width="150" alt="Ion Cupã"></a>
 <br>b.  17 aug. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion CUPÃ</h1>
 <div class="page-actions">
