--- a/www.cdep.ro/6a119f43a97edc0a1ab0a6f7e7996d06961ea355.html
+++ b/www.cdep.ro/6a119f43a97edc0a1ab0a6f7e7996d06961ea355.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dalca_Stefan_Petru.jpg" border=0 width="150" alt="ªtefan-Petru Dalca">
+<a href="/parlamentari/l2012/mari/Dalca_Stefan_Petru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dalca_Stefan_Petru.jpg" border=0 width="150" alt="ªtefan-Petru Dalca"></a>
 <br>b.  11 sep. 1969
 </div><div class="boxTitle"><h1 style="line-height: 110%;">ªtefan-Petru DALCA</h1>
 <div class="page-actions">
