--- a/www.cdep.ro/9150ba8a07fba99b32fb5ccc871030ae05574e10.html
+++ b/www.cdep.ro/9150ba8a07fba99b32fb5ccc871030ae05574e10.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Diaconu_Bogdan.jpg" border=0 width="150" alt="Mihai-Bogdan Diaconu">
+<a href="/parlamentari/l2012/mari/Diaconu_Bogdan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Diaconu_Bogdan.jpg" border=0 width="150" alt="Mihai-Bogdan Diaconu"></a>
 <br>b.  9 oct. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mihai-Bogdan DIACONU</h1>
 <div class="page-actions">
