--- a/www.cdep.ro/7ba3f5053e25c3eec20904d6dc2c02b53ba8ecb9.html
+++ b/www.cdep.ro/7ba3f5053e25c3eec20904d6dc2c02b53ba8ecb9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dobos_Anton.jpg" border=0 width="150" alt="Anton Doboº">
+<a href="/parlamentari/l2012/mari/Dobos_Anton.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dobos_Anton.jpg" border=0 width="150" alt="Anton Doboº"></a>
 <br>b.  19 may 1961
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Anton DOBOª</h1>
 <div class="page-actions">
