200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=123&leg=2012

--- a/www.cdep.ro/e4c0529b99705bd130b11b9053ee25609fee19ab.html
+++ b/www.cdep.ro/e4c0529b99705bd130b11b9053ee25609fee19ab.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dusa_Mircea.jpg" border=0 width="150" alt="Mircea Duºa">
+<a href="/parlamentari/l2012/mari/Dusa_Mircea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dusa_Mircea.jpg" border=0 width="150" alt="Mircea Duºa"></a>
 <br>b.  1 apr. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircea DUªA</h1>
 <div class="page-actions">
