200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=415&leg=2012

--- a/www.cdep.ro/318a10ec1a396b5d57f4b45b54db6ead5223fd99.html
+++ b/www.cdep.ro/318a10ec1a396b5d57f4b45b54db6ead5223fd99.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Gheorghe_Andrei_Daniel.jpg" border=0 width="150" alt="Andrei Daniel Gheorghe">
+<a href="/parlamentari/l2012/mari/Gheorghe_Andrei_Daniel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gheorghe_Andrei_Daniel.jpg" border=0 width="150" alt="Andrei Daniel Gheorghe"></a>
 <br>b.  27 jul. 1985
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Andrei Daniel GHEORGHE</h1>
 <div class="page-actions">
