200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=160&leg=2012

--- a/www.cdep.ro/779edcd35414348fefb07406fa3b72024fe92a86.html
+++ b/www.cdep.ro/779edcd35414348fefb07406fa3b72024fe92a86.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Gurzau_Adrian.jpg" border=0 width="150" alt="Adrian Gurzãu">
+<a href="/parlamentari/l2012/mari/Gurzau_Adrian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gurzau_Adrian.jpg" border=0 width="150" alt="Adrian Gurzãu"></a>
 <br>b.  20 apr. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Adrian GURZÃU</h1>
 <div class="page-actions">
