200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=166&leg=2012

--- a/www.cdep.ro/c0466a284f4218484e065c32ebc59079e330fbed.html
+++ b/www.cdep.ro/c0466a284f4218484e065c32ebc59079e330fbed.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Holban_Titi.jpg" border=0 width="150" alt="Titi Holban">
+<a href="/parlamentari/l2012/mari/Holban_Titi.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Holban_Titi.jpg" border=0 width="150" alt="Titi Holban"></a>
 <br>b.  10 nov. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Titi HOLBAN</h1>
 <div class="page-actions">
