200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=173&leg=2012

--- a/www.cdep.ro/7ee028c0f68b5fb1831060d621b6077b5291279e.html
+++ b/www.cdep.ro/7ee028c0f68b5fb1831060d621b6077b5291279e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Iancu_Iulian.jpg" border=0 width="150" alt="Iulian Iancu">
+<a href="/parlamentari/l2012/mari/Iancu_Iulian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Iancu_Iulian.jpg" border=0 width="150" alt="Iulian Iancu"></a>
 <br>b.  6 oct. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Iulian IANCU</h1>
 <div class="page-actions">
