200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=177&leg=2012

--- a/www.cdep.ro/346a8b342db8986108f44d049248663a59410fad.html
+++ b/www.cdep.ro/346a8b342db8986108f44d049248663a59410fad.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ignat_Miron.jpg" border=0 width="150" alt="Miron Ignat">
+<a href="/parlamentari/l2012/mari/Ignat_Miron.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ignat_Miron.jpg" border=0 width="150" alt="Miron Ignat"></a>
 <br>b.  24 aug. 1941
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Miron IGNAT</h1>
 <div class="page-actions">
