200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=183&leg=2012

--- a/www.cdep.ro/0d5d2062d1b70ba0c0db973f1faa182d49963636.html
+++ b/www.cdep.ro/0d5d2062d1b70ba0c0db973f1faa182d49963636.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Irimie_Vicentiu_Mircea.jpg" border=0 width="150" alt="Vicenþiu-Mircea Irimie">
+<a href="/parlamentari/l2012/mari/Irimie_Vicentiu_Mircea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Irimie_Vicentiu_Mircea.jpg" border=0 width="150" alt="Vicenþiu-Mircea Irimie"></a>
 <br>b.  21 jun. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vicenþiu-Mircea IRIMIE</h1>
 <div class="page-actions">
