200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=187&leg=2012

--- a/www.cdep.ro/7bcf4288aafcf564755b5c7c0a9ec0db5e72e22f.html
+++ b/www.cdep.ro/7bcf4288aafcf564755b5c7c0a9ec0db5e72e22f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Kelemen_Attila_Bella_Laszlo.jpg" border=0 width="150" alt="Atilla-Béla-László Kelemen">
+<a href="/parlamentari/l2012/mari/Kelemen_Attila_Bella_Laszlo.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Kelemen_Attila_Bella_Laszlo.jpg" border=0 width="150" alt="Atilla-Béla-László Kelemen"></a>
 <br>b.  4 may 1948
 </div><div class="boxTitle"><h1 style="line-height: 110%;">KELEMEN Atilla-Béla-László</h1>
 <div class="page-actions">
