200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=205&leg=2012

--- a/www.cdep.ro/490be0b7bbd4196c3f3cfcdeef76d1877c3e34b4.html
+++ b/www.cdep.ro/490be0b7bbd4196c3f3cfcdeef76d1877c3e34b4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Marian_Ion_Cristinel.jpg" border=0 width="150" alt="Ion Cristinel Marian">
+<a href="/parlamentari/l2012/mari/Marian_Ion_Cristinel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Marian_Ion_Cristinel.jpg" border=0 width="150" alt="Ion Cristinel Marian"></a>
 <br>b.  2 dec. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion Cristinel MARIAN</h1>
 <div class="page-actions">
