200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=206&leg=2012

--- a/www.cdep.ro/1f1c58235b5d38d53a8c710ed394f183a335cf91.html
+++ b/www.cdep.ro/1f1c58235b5d38d53a8c710ed394f183a335cf91.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Marin_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Marin">
+<a href="/parlamentari/l2012/mari/Marin_Gheorghe.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Marin_Gheorghe.jpg" border=0 width="150" alt="Gheorghe Marin"></a>
 <br>b.  1 oct. 1952
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe MARIN</h1>
 <div class="page-actions">
