200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=214&leg=2012

--- a/www.cdep.ro/211312afacaee71a189c1cc85cf8ad3c06be4140.html
+++ b/www.cdep.ro/211312afacaee71a189c1cc85cf8ad3c06be4140.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Maduta_Flavius_Luigi.jpg" border=0 width="150" alt="Flavius-Luigi Mãduþa">
+<a href="/parlamentari/l2012/mari/Maduta_Flavius_Luigi.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Maduta_Flavius_Luigi.jpg" border=0 width="150" alt="Flavius-Luigi Mãduþa"></a>
 <br>b.  24 feb. 1971
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Flavius-Luigi MÃDUÞA</h1>
 <div class="page-actions">
