200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=230&leg=2012

--- a/www.cdep.ro/b373419b9df850065d9ed4f3082b04a896d3f12c.html
+++ b/www.cdep.ro/b373419b9df850065d9ed4f3082b04a896d3f12c.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Mocioi_Niculina.jpg" border=0 width="150" alt="Niculina Mocioi">
+<a href="/parlamentari/l2012/mari/Mocioi_Niculina.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Mocioi_Niculina.jpg" border=0 width="150" alt="Niculina Mocioi"></a>
 <br>b.  10 may 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Niculina MOCIOI</h1>
 <div class="page-actions">
