200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=242&leg=2012

--- a/www.cdep.ro/9277f8dfb8ce5f579fca81dea0eb75e90b5b4765.html
+++ b/www.cdep.ro/9277f8dfb8ce5f579fca81dea0eb75e90b5b4765.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Nassar_Rodica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nassar_Rodica.jpg" border=0 width="150" alt="Rodica Nassar"></a>
+<img src="/parlamentari/l2012/Nassar_Rodica.jpg" border=0 width="150" alt="Rodica Nassar">
 <br>b.  25 jun. 1957
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Rodica NASSAR</h1>
 <div class="page-actions">
