200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=247&leg=2012

--- a/www.cdep.ro/99c8f206cc2e96fa4848d7c41e25043c5143f4d9.html
+++ b/www.cdep.ro/99c8f206cc2e96fa4848d7c41e25043c5143f4d9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Negrut_Clement.jpg" border=0 width="150" alt="Clement Negruþ">
+<a href="/parlamentari/l2012/mari/Negrut_Clement.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Negrut_Clement.jpg" border=0 width="150" alt="Clement Negruþ"></a>
 <br>b.  7 nov. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Clement NEGRUÞ</h1>
 <div class="page-actions">
