200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=271&leg=2012

--- a/www.cdep.ro/74e4da494541bc00182ee2a85944664f11f35b6e.html
+++ b/www.cdep.ro/74e4da494541bc00182ee2a85944664f11f35b6e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Oltean_Ioan.jpg" border=0 width="150" alt="Ioan Oltean">
+<a href="/parlamentari/l2012/mari/Oltean_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Oltean_Ioan.jpg" border=0 width="150" alt="Ioan Oltean"></a>
 <br>b.  20 apr. 1953
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan OLTEAN</h1>
 <div class="page-actions">
