200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=273&leg=2012

--- a/www.cdep.ro/5499efcb6a3976f0334300f2eaefb9810fcb6e05.html
+++ b/www.cdep.ro/5499efcb6a3976f0334300f2eaefb9810fcb6e05.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Oros_Nechita_Adrian.jpg" border=0 width="150" alt="Nechita-Adrian Oros">
+<a href="/parlamentari/l2012/mari/Oros_Nechita_Adrian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Oros_Nechita_Adrian.jpg" border=0 width="150" alt="Nechita-Adrian Oros"></a>
 <br>b.  9 jul. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Nechita-Adrian OROS</h1>
 <div class="page-actions">
