200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=290&leg=2012

--- a/www.cdep.ro/05561a9bdec3132c6bb07b0e6eb4fdc31a115ed7.html
+++ b/www.cdep.ro/05561a9bdec3132c6bb07b0e6eb4fdc31a115ed7.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Plumb_Rovana.jpg" border=0 width="150" alt="Rovana Plumb">
+<a href="/parlamentari/l2012/mari/Plumb_Rovana.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Plumb_Rovana.jpg" border=0 width="150" alt="Rovana Plumb"></a>
 <br>b.  22 jun. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Rovana PLUMB</h1>
 <div class="page-actions">
