200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=293&leg=2012

--- a/www.cdep.ro/c4cc320ec663fd11f9893d550f024f2c4cfaca96.html
+++ b/www.cdep.ro/c4cc320ec663fd11f9893d550f024f2c4cfaca96.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ponta_Victor.jpg" border=0 width="150" alt="Victor-Viorel Ponta">
+<a href="/parlamentari/l2012/mari/Ponta_Victor.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ponta_Victor.jpg" border=0 width="150" alt="Victor-Viorel Ponta"></a>
 <br>b.  20 sep. 1972
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Victor-Viorel PONTA</h1>
 <div class="page-actions">
