200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=301&leg=2012

--- a/www.cdep.ro/0c9c4b584180f62793885f014ed9468aaa1cd613.html
+++ b/www.cdep.ro/0c9c4b584180f62793885f014ed9468aaa1cd613.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Popoviciu_Alin.jpg" border=0 width="150" alt="Alin Augustin Florin Popoviciu">
+<a href="/parlamentari/l2012/mari/Popoviciu_Alin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Popoviciu_Alin.jpg" border=0 width="150" alt="Alin Augustin Florin Popoviciu"></a>
 <br>b.  23 jan. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Alin Augustin Florin POPOVICIU</h1>
 <div class="page-actions">
