200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=303&leg=2012

--- a/www.cdep.ro/a7f9675193f4937db91e44ac4f68234952bda6a4.html
+++ b/www.cdep.ro/a7f9675193f4937db91e44ac4f68234952bda6a4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Preda_Cezar.jpg" border=0 width="150" alt="Cezar-Florin Preda">
+<a href="/parlamentari/l2012/mari/Preda_Cezar.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Preda_Cezar.jpg" border=0 width="150" alt="Cezar-Florin Preda"></a>
 <br>b.  27 apr. 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cezar-Florin PREDA</h1>
 <div class="page-actions">
