200 OK http://www.cdep.ro/pls/parlam/structura2015.mp?cam=2&idl=2&idm=306&leg=2012

--- a/www.cdep.ro/d47317a5e7d07f6067d1bfc3fa0594b06688e3a9.html
+++ b/www.cdep.ro/d47317a5e7d07f6067d1bfc3fa0594b06688e3a9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Raducanu_Ion.jpg" border=0 width="150" alt="Ion Rãducanu">
+<a href="/parlamentari/l2012/mari/Raducanu_Ion.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Raducanu_Ion.jpg" border=0 width="150" alt="Ion Rãducanu"></a>
 <br>b.  24 jun. 1949
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ion RÃDUCANU</h1>
 <div class="page-actions">
